Bug 255362 - Fix PACGA encoding in ARM64EAssembler.h.
Summary: Fix PACGA encoding in ARM64EAssembler.h.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mark Lam
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-12 13:43 PDT by Mark Lam
Modified: 2023-04-12 13:53 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Lam 2023-04-12 13:43:03 PDT
The encoding was missing a shift for one of the set of bits.
Comment 1 Radar WebKit Bug Importer 2023-04-12 13:43:30 PDT
<rdar://problem/107956903>
Comment 2 Mark Lam 2023-04-12 13:48:20 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12667
Comment 3 EWS 2023-04-12 13:53:52 PDT
Committed 262884@main (6b52f0a0ff9b): <https://commits.webkit.org/262884@main>

Reviewed commits have been landed. Closing PR #12667 and removing active labels.