Fix PACGA encoding in ARM64EAssembler.h. https://bugs.webkit.org/show_bug.cgi?id=255362 rdar://107956903

Reviewed by Justin Michaud.

The encoding was missing a shift for one of the set of bits.

* Source/JavaScriptCore/assembler/ARM64EAssembler.h:

Canonical link: https://commits.webkit.org/262884@main